Ensure sidebar menu does not overlap footer

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -839,6 +839,10 @@ pre {
   }
 }
 
+#sidebar-col {
+  overflow: -webkit-paged-x;
+}
+
 // User manual index
 
 #user-manual-index {
